# carddav-rs

./: Cargo.toml
examples/: dump_vcard.rs
src/: lib.rs
