[package]
name = "carddav"
version = "0.1.0"
description = "CardDAV client library"
authors = ["Gökberk Yaltıraklı <webdosusb@gmail.com>"]
documentation = "https://docs.rs/carddav"
license = "MIT"
repository = "https://github.com/gkbrk/carddav-rs"
homepage = "https://github.com/gkbrk/carddav-rs"

[dependencies]
reqwest = "0.8"
minidom = "0.8"
failure = "0.1"
hyper = "0.11"
lazy_static = "1.0"